# ZYNQ-NVDLA

./: .gitignore  README.md
IP/: component.xml
IP/src/: HLS_cdp_ocvt.v  MUX2HDD2.v  NV_BLKBOX_SINK.v  NV_HWACC_NVDLA_tick_defines.vh  NV_NVDLA_CACC_assembly_buffer.v  NV_NVDLA_CACC_assembly_ctrl.v  NV_NVDLA_CACC_delivery_ctrl.v  NV_NVDLA_CACC_slcg.v  NV_NVDLA_CDMA_IMG_sg.v  NV_NVDLA_CDMA_WT_8ATMM_fifo.v  NV_NVDLA_CDMA_cvt.v  NV_NVDLA_CDMA_regfile.v  NV_NVDLA_CDMA_single_reg.v  NV_NVDLA_CDMA_slcg.v  NV_NVDLA_CDP_DP_LUT_CTRL_unit.v  NV_NVDLA_CDP_DP_bufferin_tp1.v  NV_NVDLA_CDP_DP_data_fifo.v  NV_NVDLA_CDP_DP_intpinfo_fifo.v  NV_NVDLA_CDP_DP_mul.v  NV_NVDLA_CDP_DP_sumpd_fifo.v  NV_NVDLA_CDP_RDMA_REG_single.v  NV_NVDLA_CDP_RDMA_ig.v  NV_NVDLA_CDP_RDMA_lat_fifo.v  NV_NVDLA_CDP_RDMA_ro_fifo.v  NV_NVDLA_CDP_REG_single.v  NV_NVDLA_CDP_dp.v  NV_NVDLA_CDP_wdma.v  NV_NVDLA_CFGROM_rom.v  NV_NVDLA_CMAC_CORE_active.v  NV_NVDLA_CMAC_CORE_cfg.v  NV_NVDLA_CMAC_CORE_rt_in.v  NV_NVDLA_CMAC_REG_single.v  NV_NVDLA_CSB_MASTER_falcon2csb_fifo.v  NV_NVDLA_CSC_SG_wt_fifo.v  NV_NVDLA_CSC_dual_reg.v  NV_NVDLA_CSC_regfile.v  NV_NVDLA_DMAIF_rdrsp.v  NV_NVDLA_HLS_saturate.v  NV_NVDLA_MCIF_CSB_reg.v  NV_NVDLA_MCIF_READ_IG_arb.v  (+66 more)
RTL/: NV_nvdla_wrapper.v
kmd/Zynq7000/: README  opendla.bb
kmd/ZynqMPSoc/: opendla.bb
paper/: .gitignore  README.md  Thesis.aux  Thesis.bbl  Thesis.blg  Thesis.out  Thesis.tex  Thesis.tex.blg  Thesis.toc  artratex.sh
reports/: speedup.xlsx  speedupratio.xlsx
umd/: CMakeLists.txt  Makefile
umd/core/src/runtime/: CMakeLists.txt  Makefile  Runtime.cpp
(+523 files in other folders)
